# TensorRT-EinsumPlugin

./: .gitignore  CMakeLists.txt  Einsum.cpp  README.md  SourceMnist.cpp  cublasTest.cpp  gcn.onnx  generate_onnx.py  infer_test.cpp  mnist.cpp  onnx2trt.cpp  onnx2trt_gcn.cpp  resnet50.cpp  sample.cpp  temp.cpp  testNet.cpp
einsum/: CMakeLists.txt  Einsum.cpp  Einsum.h
einsum/einsum_common7/: CMakeLists.txt
einsum/einsum_common8/: CMakeLists.txt  ErrorRecorder.h  common.h  logging.h  plugin.h  sampleEngines.cpp  sampleInference.cpp  sampleOptions.cpp  sampleOptions.h
function/: CMakeLists.txt  TrtInfer.cpp  function.cpp  image.cpp
include/: Head.h  TrtInfer.h  function.h  image.hpp
